[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Obstacles/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/enemies.svg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.4958, 22.7259 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.5399, 3.04021 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.20774, 9.36134 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 443, 9, 50, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Aup" type="Area2D" parent="."]
editor/display_folded = true

[node name="up" type="CollisionShape2D" parent="Aup"]
position = Vector2( -0.203903, -29.7705 )
shape = SubResource( 3 )

[node name="Aright" type="Area2D" parent="."]
editor/display_folded = true

[node name="right" type="CollisionShape2D" parent="Aright"]
position = Vector2( 30.1783, 0 )
shape = SubResource( 2 )

[node name="Aleft" type="Area2D" parent="."]
editor/display_folded = true

[node name="left" type="CollisionShape2D" parent="Aleft"]
position = Vector2( -29.9744, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Aup" to="." method="_on_Aup_body_entered"]
[connection signal="body_entered" from="Aright" to="." method="_on_Aright_body_entered"]
[connection signal="body_entered" from="Aleft" to="." method="_on_Aleft_body_entered"]
